Proyectos y practicas/3º/PL/PL-Practica-Final-AJS/PL_P2_AGUILAR_RODRIGUEZ/tests/propios/invalidos_semantico/test2.ajs
let a: Persona; // persona not defined

type Persona = {
    nombre: character,
    edad: int,
    sexo: character
};

a = {
    nombre: 'J',
    edad: 30,
    sexo: 'M'
}; // a not defined